samples/_failures_safe/1761391369_5338bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fc39624.c: In function ‘main’:
./samples/SAFE/__tmp_3fc39624.c:147:33: error: expected ‘)’ at end of input
  147 |     if (scanf("%d", &start) != 1
      |        ~                        ^
      |                                 )
./samples/SAFE/__tmp_3fc39624.c:147:5: error: expected declaration or statement at end of input
  147 |     if (scanf("%d", &start) != 1
      |     ^~
